--- a/01-Introduction-to-Python/PY0101EN-2-1-Tuples.ipynb
+++ b/01-Introduction-to-Python/PY0101EN-2-1-Tuples.ipynb
@@ -958,6 +958,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'tuple'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "empty_tuple = ()\n",
+        "\n",
+        "print(type(empty_tuple))"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -980,7 +999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 3,
       "metadata": {
         "trusted": true
       },
@@ -991,7 +1010,7 @@
               "8"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1013,7 +1032,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
@@ -1024,7 +1043,7 @@
               "8"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1151,11 +1170,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "('pop', 'rock')"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute\n"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "genres_tuple[:2]"
       ]
     },
     {
@@ -1181,7 +1212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 7,
       "metadata": {
         "trusted": true
       },
@@ -1189,16 +1220,17 @@
         {
           "data": {
             "text/plain": [
-              "7"
+              "'d'"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
+        "genres_tuple[7]\n",
         "genres_tuple[7][0]\n",
         "genres_tuple.index(\"disco\")"
       ]
@@ -1296,13 +1328,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -1310,7 +1342,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
