--- a/01-Introduction-to-Python/PY0101EN-2-3-Sets.ipynb
+++ b/01-Introduction-to-Python/PY0101EN-2-3-Sets.ipynb
@@ -65,13 +65,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'R&B', 'disco', 'hard rock', 'pop', 'rock', 'soul'}"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a set\n",
         "\n",
-        "set1 = {\"pop\", \"rock\", \"soul\", \"hard rock\", \"rock\", \"R&B\", \"rock\", \"disco\"}\n",
+        "set1 = {\"pop\", \"pop\", \"rock\", \"soul\", \"hard rock\", \"rock\", \"R&B\", \"rock\", \"disco\"}\n",
         "set1"
       ]
     },
@@ -148,9 +159,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'AC/DC', 'Back in Black', 'Thriller'}"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Sample set\n",
         "\n",
@@ -167,14 +189,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'AC/DC', 'Thriller', 'Back in Black', 'Graduation', 'NSYNC'}\n"
+          ]
+        }
+      ],
       "source": [
         "# Add element to set\n",
         "\n",
         "A.add(\"NSYNC\")\n",
-        "A"
+        "\n",
+        "A.add(\"Graduation\")\n",
+        "\n",
+        "print(A)"
       ]
     },
     {
@@ -186,9 +219,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'AC/DC', 'Back in Black', 'Graduation', 'NSYNC', 'Thriller'}"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Try to add duplicate element to the set\n",
         "\n",
@@ -205,14 +249,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'AC/DC', 'Thriller', 'Back in Black', 'Graduation'}\n"
+          ]
+        }
+      ],
       "source": [
         "# Remove the element from set\n",
         "\n",
         "A.remove(\"NSYNC\")\n",
-        "A"
+        "print(A)\n"
       ]
     },
     {
@@ -224,27 +276,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {
         "trusted": true
       },
       "outputs": [
         {
-          "ename": "<class 'NameError'>",
-          "evalue": "name 'A' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Verify if the element is in the set\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAC/DC\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[43mA\u001b[49m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'A' is not defined"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n"
           ]
         }
       ],
       "source": [
         "# Verify if the element is in the set\n",
         "\n",
-        "\"AC/DC\" in A"
+        "print(\"AC/DC\" in A)\n",
+        "print(\"College Dropout\" in A)"
       ]
     },
     {
@@ -270,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -289,11 +339,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "scrolled": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "({'AC/DC', 'Back in Black', 'Thriller'},\n",
+              " {'AC/DC', 'Back in Black', 'The Dark Side of the Moon'})"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Print two sets\n",
         "\n",
@@ -323,9 +385,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'AC/DC', 'Back in Black'}"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Find the intersections\n",
         "\n",
@@ -342,13 +415,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Thriller'}\n",
+            "{'The Dark Side of the Moon'}\n"
+          ]
+        }
+      ],
       "source": [
         "# Find the difference in set1 but not set2\n",
         "\n",
-        "album_set1.difference(album_set2)  "
+        "print(album_set1.difference(album_set2))\n",
+        "print(album_set2.difference(album_set1))"
       ]
     },
     {
@@ -374,9 +457,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'The Dark Side of the Moon'}"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "album_set2.difference(album_set1)  "
       ]
@@ -397,9 +491,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'AC/DC', 'Back in Black'}"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use intersection method to find the intersection of album_list1 and album_list2\n",
         "\n",
@@ -443,14 +548,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "collapsed": true,
         "jupyter": {
           "outputs_hidden": true
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'AC/DC', 'Back in Black', 'The Dark Side of the Moon', 'Thriller'}"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Find the union of two sets\n",
         "\n",
@@ -466,20 +582,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Check if superset\n",
         "\n",
-        "set(album_set1).issuperset(album_set2)   "
+        "set(album_set1).issuperset(album_set2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Check if subset\n",
         "\n",
@@ -495,9 +633,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Check if subset\n",
         "\n",
@@ -506,9 +655,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Check if superset\n",
         "\n",
@@ -789,13 +949,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -803,7 +963,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
