--- a/01-Introduction-to-Python/PY0101EN-2-4-Dictionaries.ipynb
+++ b/01-Introduction-to-Python/PY0101EN-2-4-Dictionaries.ipynb
@@ -78,19 +78,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'key1': 2, 'key2': '2', 'key3': [3, 3, 3], 'key4': (4, 4, 4), 'key5': 5, (0, 1): 6}\n",
+            "<class 'dict'>\n"
+          ]
+        }
+      ],
       "source": [
         "# Create the dictionary\n",
         "\n",
         "Dict = {\"key1\": 1, \"key2\": \"2\", \"key3\": [3, 3, 3], \"key4\": (4, 4, 4), ('key5'): 5, (0, 1): 6}\n",
-        "Dict"
+        "print(Dict)\n",
+        "print(type(Dict))\n"
       ]
     },
     {
@@ -102,18 +112,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[3, 3, 3]"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Access to the value by the key\n",
         "\n",
-        "Dict[\"key1\"]"
+        "print(Dict[\"key1\"])\n",
+        "\n",
+        "Dict ['key3']"
       ]
     },
     {
@@ -148,14 +178,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Thriller': '1982',\n",
+              " 'Back in Black': '1980',\n",
+              " 'The Dark Side of the Moon': '1973',\n",
+              " 'The Bodyguard': '1992',\n",
+              " 'Bat Out of Hell': '1977',\n",
+              " 'Their Greatest Hits (1971-1975)': '1976',\n",
+              " 'Saturday Night Fever': '1977',\n",
+              " 'Rumours': '1977'}"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Create a sample dictionary\n",
         "\n",
@@ -203,16 +251,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'1982'"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Get value by keys\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "release_year_dict['Thriller'] "
       ]
@@ -240,14 +302,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'1992'"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Get value by key\n",
         "\n",
@@ -270,18 +343,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('Thriller', 'Back in Black', 'The Dark Side of the Moon', 'The Bodyguard', 'Bat Out of Hell', 'Their Greatest Hits (1971-1975)', 'Saturday Night Fever', 'Rumours')\n"
+          ]
+        }
+      ],
       "source": [
         "# Get all the keys in dictionary\n",
         "\n",
-        "release_year_dict.keys() "
+        "print(tuple(release_year_dict.keys()))\n",
+        " "
       ]
     },
     {
@@ -293,18 +375,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "dict_items([('Thriller', '1982'), ('Back in Black', '1980'), ('The Dark Side of the Moon', '1973'), ('The Bodyguard', '1992'), ('Bat Out of Hell', '1977'), ('Their Greatest Hits (1971-1975)', '1976'), ('Saturday Night Fever', '1977'), ('Rumours', '1977')])\n"
+          ]
+        }
+      ],
       "source": [
         "# Get all the values in dictionary\n",
         "\n",
-        "release_year_dict.values() "
+        "print(release_year_dict.values())\n",
+        "\n",
+        "print(release_year_dict.items())"
       ]
     },
     {
@@ -316,19 +408,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Thriller': '2023', 'Back in Black': '1980', 'The Dark Side of the Moon': '1973', 'The Bodyguard': '1992', 'Bat Out of Hell': '1977', 'Their Greatest Hits (1971-1975)': '1976', 'Saturday Night Fever': '1977', 'Rumours': '1977', 'Graduation': '2007'}\n"
+          ]
+        }
+      ],
       "source": [
         "# Append value with key into dictionary\n",
         "\n",
         "release_year_dict['Graduation'] = '2007'\n",
-        "release_year_dict"
+        "print(release_year_dict)\n",
+        "\n",
+        "\n",
+        "release_year_dict['Thriller'] = '2023'"
       ]
     },
     {
@@ -340,20 +443,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Back in Black': '1980', 'The Dark Side of the Moon': '1973', 'The Bodyguard': '1992', 'Bat Out of Hell': '1977', 'Their Greatest Hits (1971-1975)': '1976', 'Saturday Night Fever': '1977', 'Rumours': '1977'}\n"
+          ]
+        }
+      ],
       "source": [
         "# Delete entries by key\n",
         "\n",
         "del(release_year_dict['Thriller'])\n",
         "del(release_year_dict['Graduation'])\n",
-        "release_year_dict"
+        "print(release_year_dict)"
       ]
     },
     {
@@ -365,18 +476,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
         "# Verify the key is in the dictionary\n",
         "\n",
-        "'The Bodyguard' in release_year_dict"
+        "print('The Bodyguard' in release_year_dict)\n",
+        "print('Thriller' in release_year_dict)"
       ]
     },
     {
@@ -402,14 +523,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'The Bodyguard': '1992', 'Saturday Night Fever': '1977'}\n"
+          ]
+        }
+      ],
       "source": [
         "# Question sample dictionary\n",
         "\n",
         "soundtrack_dic = {\"The Bodyguard\":\"1992\", \"Saturday Night Fever\":\"1977\"}\n",
-        "soundtrack_dic "
+        "print(soundtrack_dic)\n",
+        " "
       ]
     },
     {
@@ -527,21 +657,36 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "b) Use the dictionary to find the total sales of <b>Thriller</b>:\n"
+        "b) Use the dictionary to find the total sales of <b>Thriller</b>:\n",
+        "Print it in this format:\n",
+        "\n",
+        "The total sales of Thriller is 50 million."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "collapsed": false,
         "jupyter": {
           "outputs_hidden": false
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "65\n",
+            "The total sales of Thriller is  65  million\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write your code below and press Shift+Enter to execute\n"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "album_sales_dict = {\"The Bodyguard\":50, \"Back in Black\":50, \"Thriller\":65}\n",
+        "print(album_sales_dict['Thriller'])\n",
+        "print('The total sales of Thriller is ', album_sales_dict['Thriller'], ' million')\n"
       ]
     },
     {
@@ -562,7 +707,35 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "c) Find the names of the albums from the dictionary using the method <code>keys()</code>:\n"
+        "c) Find the average and the sum of the three sales"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'int' object is not callable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28msum\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43malbum_sales_dict\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msum: \u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28msum\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# average = float(sum) / len(album_sales_dict)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# print('average: ', average)\u001b[39;00m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+          ]
+        }
+      ],
+      "source": [
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "d) Find the names of the albums from the dictionary using the method <code>keys()</code>:\n"
       ]
     },
     {
@@ -670,13 +843,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -684,7 +857,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
