--- a/01-Introduction-to-Python/PY0101EN-3-1-Conditions.ipynb
+++ b/01-Introduction-to-Python/PY0101EN-3-1-Conditions.ipynb
@@ -81,9 +81,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Condition Equal\n",
         "\n",
@@ -107,9 +118,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Greater than Sign\n",
         "\n",
@@ -126,14 +148,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Greater than Sign\n",
         "\n",
         "i = 2\n",
-        "i > 5"
+        "i > 5\n"
       ]
     },
     {
@@ -159,27 +192,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "trusted": true
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 1,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
         }
       ],
       "source": [
         "# Inequality Sign\n",
         "\n",
         "i = 2\n",
-        "i != 6"
+        "print(i != 6)\n",
+        "\n",
+        "print(i != 2)"
       ]
     },
     {
@@ -191,9 +224,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Inequality Sign\n",
         "\n",
@@ -224,9 +268,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use Equality sign to compare the strings\n",
         "\n",
@@ -242,13 +297,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use Inequality sign to compare the strings\n",
         "\n",
-        "\"ACDC\" != \"Michael Jackson\""
+        "\"ACDC\" != \"Michael Jackson\"\n"
       ]
     },
     {
@@ -438,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {
         "trusted": true
       },
@@ -449,7 +515,7 @@
               "True"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -457,7 +523,9 @@
       "source": [
         "# Compare characters\n",
         "\n",
-        "'B' > 'A'"
+        "'B' > 'A'\n",
+        "\n",
+        "'a' > 'A'"
       ]
     },
     {
@@ -469,13 +537,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "# Compare characters\n",
         "\n",
-        "'BA' > 'AB'"
+        "print('BA' > 'AB')\n",
+        "\n",
+        "print('BB' > 'BA')\n",
+        "\n",
+        "print(\"Mike\" > \"Michael\")"
       ]
     },
     {
@@ -512,13 +594,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "move on\n"
+          ]
+        }
+      ],
       "source": [
         "# If statement example\n",
         "\n",
-        "age = 19\n",
+        "age = 17\n",
         "#age = 18\n",
         "\n",
         "#expression that can be true or false\n",
@@ -530,6 +620,13 @@
         "#The statements after the if statement will run regardless if the condition is true or false \n",
         "print(\"move on\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -563,9 +660,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "go see Meat Loaf\n",
+            "move on\n"
+          ]
+        }
+      ],
       "source": [
         "# Else statement example\n",
         "\n",
@@ -577,7 +683,7 @@
         "else:\n",
         "    print(\"go see Meat Loaf\" )\n",
         "    \n",
-        "print(\"move on\")"
+        "print(\"move on\")\n"
       ]
     },
     {
@@ -626,6 +732,8 @@
         "    print(\"you can enter\" )\n",
         "elif age == 18:\n",
         "    print(\"go see Pink Floyd\")\n",
+        "elif age < 18:\n",
+        "    print(\"you're not an adult yet\" )\n",
         "else:\n",
         "    print(\"go see Meat Loaf\" )\n",
         "    \n",
@@ -662,7 +770,7 @@
         "# Condition statement example\n",
         "\n",
         "album_year = 1983\n",
-        "album_year = 1970\n",
+        "# album_year = 1970\n",
         "\n",
         "if album_year > 1980:\n",
         "    print(\"Album year is greater than 1980\")\n",
@@ -799,13 +907,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Do Stuff..\n"
+          ]
+        }
+      ],
       "source": [
         "# Condition statement example\n",
         "\n",
-        "album_year = 1980\n",
+        "album_year = 1979\n",
         "\n",
         "if(album_year > 1979) and (album_year < 1990):\n",
         "    print (\"Album year was in between 1980 and 1989\")\n",
@@ -871,6 +988,15 @@
         "\n",
         "if not (album_year == 1984):\n",
         "    print (\"Album year is not 1984\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "x = input('how much money do you have?')"
       ]
     },
     {
@@ -1026,13 +1152,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -1040,7 +1166,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
