--- a/01-Introduction-to-Python/PY0101EN-3-2-Loops.ipynb
+++ b/01-Introduction-to-Python/PY0101EN-3-2-Loops.ipynb
@@ -18,6 +18,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "x = 3\n",
+        "x >= 4"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -81,13 +102,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "range(0, 3)\n",
+            "[0, 1, 2]\n"
+          ]
+        }
+      ],
       "source": [
         "# Use the range\n",
         "\n",
-        "range(3)"
+        "y = range(3)\n",
+        "\n",
+        "print(y)\n",
+        "\n",
+        "type(y)\n",
+        "\n",
+        "print(list(y))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(0, 3, 6, 9, 12, 15, 18)\n"
+          ]
+        }
+      ],
+      "source": [
+        "#range(start, stop, step)\n",
+        "# list[start:stop:step]\n",
+        "\n",
+        "z = range(0,20, 3)\n",
+        "print(tuple(z))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[20, 17, 14, 11, 8, 5, 2]\n"
+          ]
+        }
+      ],
+      "source": [
+        "A = range(20, 0, -3)\n",
+        "\n",
+        "print(list(A))"
       ]
     },
     {
@@ -128,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {
         "trusted": true
       },
@@ -147,10 +223,40 @@
         "# For loop example\n",
         "\n",
         "dates = [1982,1980,1973]\n",
-        "N = len(dates)\n",
+        "N = len(dates) #3\n",
         "\n",
-        "for i in range(N):\n",
-        "    print(dates[i])     "
+        "for x in range(N): # [0, 1, 2]\n",
+        "    print(dates[x])   \n",
+        "\n",
+        "  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1982\n",
+            "1980\n",
+            "1973\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "for date in dates:\n",
+        "    print(date)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Immutable data types are preferred for **for** loops"
       ]
     },
     {
@@ -176,9 +282,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n"
+          ]
+        }
+      ],
       "source": [
         "# Example of for loop\n",
         "\n",
@@ -195,9 +316,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1982\n",
+            "1980\n",
+            "1973\n"
+          ]
+        }
+      ],
       "source": [
         "# Exmaple of for loop, loop through list\n",
         "\n",
@@ -228,7 +359,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 21,
       "metadata": {
         "trusted": true
       },
@@ -262,6 +393,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "((0, 'red'), (1, 'yellow'), (2, 'green'), (3, 'purple'), (4, 'blue'))\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(tuple(enumerate(squares)))\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -270,16 +418,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0 red\n",
+            "1 yellow\n",
+            "2 green\n",
+            "3 purple\n",
+            "4 blue\n"
+          ]
+        }
+      ],
       "source": [
         "# Loop through the list and iterate on both index and element value\n",
         "\n",
         "squares=['red', 'yellow', 'green', 'purple', 'blue']\n",
         "\n",
-        "for i, square in enumerate(squares):\n",
-        "    print(i, square)"
+        "for (i, square) in enumerate(squares):\n",
+        "    print(i, square)\n"
       ]
     },
     {
@@ -305,9 +465,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1982\n",
+            "1980\n",
+            "It took  2 repetitions to get out of loop.\n"
+          ]
+        }
+      ],
       "source": [
         "# While Loop Example\n",
         "\n",
@@ -362,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 27,
       "metadata": {
         "trusted": true
       },
@@ -371,22 +541,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "-4\n",
-            "-3\n",
-            "-2\n",
-            "-1\n",
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n"
+            "-4  -3  -2  -1  0  1  2  3  4  "
           ]
         }
       ],
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
         "for i in range(-4, 5):\n",
-        "    print(i)\n"
+        "    print(i,' ', end='')\n"
       ]
     },
     {
@@ -635,48 +797,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Multiplication table of 6:\n",
-            "6* 0 = 0\n",
-            "6* 1 = 6\n",
-            "6* 2 = 12\n",
-            "6* 3 = 18\n",
-            "6* 4 = 24\n",
-            "6* 5 = 30\n",
-            "6* 6 = 36\n",
-            "6* 7 = 42\n",
-            "6* 8 = 48\n",
-            "6* 9 = 54\n",
-            "Multiplication table of 7:\n",
-            "7* 0 = 0\n",
-            "7* 1 = 7\n",
-            "7* 2 = 14\n",
-            "7* 3 = 21\n",
-            "7* 4 = 28\n",
-            "7* 5 = 35\n",
-            "7* 6 = 42\n",
-            "7* 7 = 49\n",
-            "7* 8 = 56\n",
-            "7* 9 = 63\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Write your code here\n",
         "print(\"Multiplication table of 6:\")\n",
         "for i in range (10):\n",
-        "    print(\"6*\",i,\"=\",6*i)\n",
+        "    print(\"6 x\",i,\"=\",6*i)\n",
         "print(\"Multiplication table of 7:\")\n",
         "for i in range (10):\n",
-        "    print(\"7*\",i,\"=\",7*i)"
+        "    print(\"7 x\",i,\"=\",7*i)\n",
+        "\n"
       ]
     },
     {
@@ -728,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 31,
       "metadata": {
         "trusted": true
       },
@@ -749,6 +883,186 @@
         "    if len(animal) == 7:\n",
         "        animal_7.append(animal)\n",
         "print(animal_7)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "It continued\n",
+            "1\n",
+            "It continued\n",
+            "2\n",
+            "It continued\n",
+            "3\n",
+            "It continued\n",
+            "4\n",
+            "It continued\n",
+            "5\n",
+            "It continued\n",
+            "6\n",
+            "It continued\n",
+            "7\n",
+            "It continued\n",
+            "8\n",
+            "It continued\n",
+            "9\n",
+            "It continued\n",
+            "10\n",
+            "It continued\n",
+            "11\n",
+            "It continued\n",
+            "12\n",
+            "It continued\n",
+            "13\n",
+            "It continued\n",
+            "14\n",
+            "It continued\n",
+            "15\n",
+            "It continued\n",
+            "16\n",
+            "It continued\n",
+            "17\n",
+            "It continued\n",
+            "18\n",
+            "It continued\n",
+            "19\n",
+            "It continued\n",
+            "20\n",
+            "It continued\n",
+            "21\n",
+            "It continued\n",
+            "22\n",
+            "It continued\n",
+            "23\n",
+            "It continued\n",
+            "24\n",
+            "It continued\n",
+            "25\n",
+            "It continued\n",
+            "26\n",
+            "It continued\n",
+            "27\n",
+            "It continued\n",
+            "28\n",
+            "It continued\n",
+            "29\n",
+            "It continued\n",
+            "30\n",
+            "It continued\n",
+            "31\n",
+            "It continued\n",
+            "32\n",
+            "It continued\n",
+            "33\n",
+            "It continued\n",
+            "34\n",
+            "It continued\n",
+            "35\n",
+            "It continued\n",
+            "36\n",
+            "It continued\n",
+            "37\n",
+            "It continued\n",
+            "38\n",
+            "It continued\n",
+            "39\n",
+            "It continued\n",
+            "40\n",
+            "It continued\n",
+            "41\n",
+            "It continued\n",
+            "42\n",
+            "It continued\n",
+            "43\n",
+            "It continued\n",
+            "44\n",
+            "It continued\n",
+            "45\n",
+            "It continued\n",
+            "46\n",
+            "It continued\n",
+            "47\n",
+            "It continued\n",
+            "48\n",
+            "It continued\n",
+            "49\n",
+            "It continued\n",
+            "50\n",
+            "It continued\n",
+            "51\n",
+            "52\n",
+            "53\n",
+            "54\n",
+            "55\n",
+            "56\n",
+            "57\n",
+            "58\n",
+            "59\n",
+            "60\n",
+            "61\n",
+            "62\n",
+            "63\n",
+            "64\n",
+            "65\n",
+            "66\n",
+            "67\n",
+            "68\n",
+            "69\n",
+            "70\n",
+            "71\n",
+            "72\n",
+            "73\n",
+            "74\n",
+            "75\n",
+            "76\n",
+            "77\n",
+            "78\n",
+            "79\n",
+            "80\n",
+            "81\n",
+            "82\n",
+            "83\n",
+            "84\n",
+            "85\n",
+            "86\n",
+            "87\n",
+            "88\n",
+            "89\n",
+            "90\n",
+            "91\n",
+            "92\n",
+            "93\n",
+            "94\n",
+            "95\n",
+            "96\n",
+            "97\n",
+            "98\n",
+            "99\n"
+          ]
+        }
+      ],
+      "source": [
+        "# break\n",
+        "# continue\n",
+        "# pass\n",
+        "x = 3\n",
+        "# while x > 2:\n",
+        "#     x = x - 1\n",
+        "#     pass\n",
+        "\n",
+        "for i in range(100):\n",
+        "    print(i)\n",
+        "    if i > 50:\n",
+        "        continue\n",
+        "    print('It continued')\n",
+        "\n"
       ]
     },
     {
@@ -832,13 +1146,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -846,7 +1160,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
