--- a/01-Introduction-to-Python/PY0101EN-1-2-Strings.ipynb
+++ b/01-Introduction-to-Python/PY0101EN-1-2-Strings.ipynb
@@ -68,14 +68,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Michael Jackson'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use quotation marks for defining string\n",
         "\n",
@@ -91,14 +99,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Michael Jackson'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use single quotation marks for defining string\n",
         "\n",
@@ -114,14 +130,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'1 2 3 4 5 6 '"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Digitals and spaces in string\n",
         "\n",
@@ -137,12 +161,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -151,7 +172,7 @@
               "'@#2_#]&*^%$'"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -171,12 +192,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -202,12 +220,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -216,7 +231,7 @@
               "'Michael Jackson'"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -276,12 +291,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -307,12 +319,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -338,12 +347,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -397,14 +403,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "n\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the last element in the string\n",
         "\n",
@@ -420,14 +431,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "M\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the first element in the string\n",
         "\n",
@@ -443,14 +459,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Find the length of string\n",
         "\n",
@@ -491,14 +515,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Mich'"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Take the slice on variable name with only index 0 to index 3\n",
         "\n",
@@ -507,14 +539,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Jack'"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Take the slice on variable name with only index 8 to index 11\n",
         "\n",
@@ -544,14 +584,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'McalJcsn'"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Get every second element. The elments on index 1, 3, 5 ...\n",
         "\n",
@@ -569,10 +617,7 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -610,10 +655,7 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -645,10 +687,7 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -679,10 +718,7 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -729,10 +765,7 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -761,10 +794,7 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -792,10 +822,7 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -823,10 +850,7 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -875,10 +899,7 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -910,10 +931,7 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -942,12 +960,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -956,7 +971,7 @@
               "'Janet Jackson is the best'"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -971,10 +986,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1011,12 +1023,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1025,7 +1034,7 @@
               "5"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1039,12 +1048,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1053,7 +1059,7 @@
               "8"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1073,12 +1079,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1087,7 +1090,7 @@
               "-1"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1109,10 +1112,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1165,11 +1165,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import re"
@@ -1185,11 +1181,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "s1 = \"Michael Jackson is the best\"\n",
@@ -1238,10 +1230,7 @@
       "cell_type": "code",
       "execution_count": 25,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1282,10 +1271,7 @@
       "cell_type": "code",
       "execution_count": 26,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1322,10 +1308,7 @@
       "cell_type": "code",
       "execution_count": 27,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1358,10 +1341,7 @@
       "cell_type": "code",
       "execution_count": 28,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1391,10 +1371,7 @@
       "cell_type": "code",
       "execution_count": 29,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1444,10 +1421,7 @@
       "cell_type": "code",
       "execution_count": 32,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1493,10 +1467,7 @@
       "cell_type": "code",
       "execution_count": 33,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1542,10 +1513,7 @@
       "cell_type": "code",
       "execution_count": 35,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1598,10 +1566,7 @@
       "cell_type": "code",
       "execution_count": 37,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1658,10 +1623,7 @@
       "cell_type": "code",
       "execution_count": 38,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1714,10 +1676,7 @@
       "cell_type": "code",
       "execution_count": 40,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1769,10 +1728,7 @@
       "cell_type": "code",
       "execution_count": 41,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1818,10 +1774,7 @@
       "cell_type": "code",
       "execution_count": 42,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1873,10 +1826,7 @@
       "cell_type": "code",
       "execution_count": 43,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1924,10 +1874,7 @@
       "cell_type": "code",
       "execution_count": 44,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -1972,10 +1919,7 @@
       "cell_type": "code",
       "execution_count": 45,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -2019,10 +1963,7 @@
       "cell_type": "code",
       "execution_count": 46,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -2104,10 +2045,7 @@
       "cell_type": "code",
       "execution_count": 48,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -2161,10 +2099,7 @@
       "cell_type": "code",
       "execution_count": 50,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -2212,10 +2147,7 @@
       "cell_type": "code",
       "execution_count": 52,
       "metadata": {
-        "trusted": true,
-        "vscode": {
-          "languageId": "python"
-        }
+        "trusted": true
       },
       "outputs": [
         {
@@ -2283,23 +2215,28 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
-      "name": ""
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
