--- a/01-Introduction-to-Python/PY0101EN-2-2-Lists.ipynb
+++ b/01-Introduction-to-Python/PY0101EN-2-2-Lists.ipynb
@@ -61,6 +61,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "[1, 2]\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2]\n",
+            "<class 'list'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "point = [1, 2]\n",
+        "\n",
+        "\n",
+        "print(point)\n",
+        "\n",
+        "print(type(point))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[1, 2], 2, 'caleb']\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_list = [point, 2 , 'caleb']\n",
+        "\n",
+        "print(my_list)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -240,14 +306,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Michael Jackson', 10.1, 1982]\n",
+            "Michael Jackson\n",
+            "10.1\n",
+            "1982\n"
+          ]
+        }
+      ],
       "source": [
         "# Create a list\n",
         "\n",
         "L = [\"Michael Jackson\", 10.1, 1982]\n",
-        "L"
+        "        # 0              1      3\n",
+        "print(L)\n",
+        "\n",
+        "print(L[0])\n",
+        "\n",
+        "print(L[1])\n",
+        "\n",
+        "print(L[2])"
       ]
     },
     {
@@ -278,6 +362,23 @@
         "'\\n Negative:' , L[-2]  )\n",
         "print('the same element using negative and positive indexing:\\n Postive:',L[2],\n",
         "'\\n Negative:' , L[-1]  )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1982\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(L[-1])"
       ]
     },
     {
@@ -321,14 +422,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Michael Jackson', 10.1, 1982, 'MJ', 1]\n"
+          ]
+        }
+      ],
       "source": [
         "# Sample List\n",
         "\n",
         "L = [\"Michael Jackson\", 10.1,1982,\"MJ\",1]\n",
-        "L"
+        "print(L)"
       ]
     },
     {
@@ -340,13 +449,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['MJ', 1]\n"
+          ]
+        }
+      ],
       "source": [
         "# List slicing\n",
         "\n",
-        "L[3:5]"
+        "sub = L[3:5]\n",
+        "\n",
+        "print(sub)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[7, 4]\n"
+          ]
+        }
+      ],
+      "source": [
+        "long_list = [5, 3, 10, 2, 4, 7]\n",
+        "\n",
+        "l_list = long_list[5:3:-1]\n",
+        "print(l_list)\n"
       ]
     },
     {
@@ -358,15 +497,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Michael Jackson', 10.2, 'pop', 10]\n",
+            "4\n"
+          ]
+        }
+      ],
       "source": [
         "# Use extend to add elements to list\n",
         "\n",
         "L = [ \"Michael Jackson\", 10.2]\n",
         "L.extend(['pop', 10])\n",
-        "L"
+        "print(L)\n",
+        "print(len(L))"
       ]
     },
     {
@@ -378,15 +527,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Michael Jackson', 10.2, ['pop', 10]]\n",
+            "3\n"
+          ]
+        }
+      ],
       "source": [
         "# Use append to add elements to list\n",
         "\n",
         "L = [ \"Michael Jackson\", 10.2]\n",
         "L.append(['pop', 10])\n",
-        "L"
+        "print(L)\n",
+        "print(len(L))\n"
       ]
     },
     {
@@ -407,6 +566,54 @@
         "L = [ \"Michael Jackson\", 10.2]\n",
         "L.extend(['pop', 10])\n",
         "L"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Michael Jackson', 10.2, 'pop', 10]\n",
+            "['Michael Jackson', 10.2, ['pop', 10]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "La = [\"Michael Jackson\", 10.2]\n",
+        "Lb = La[:] # [\"Michael Jackson\", 10.2]\n",
+        "Lc = La\n",
+        "\n",
+        "La.extend(['pop', 10])\n",
+        "Lb.append(['pop', 10])\n",
+        "\n",
+        "print(La)\n",
+        "print(Lb)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Michael Jackson', 10.2, 'pop', 10]\n",
+            "4\n",
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(Lc)\n",
+        "\n",
+        "print(len(Lc))\n",
+        "print(len(Lb))"
       ]
     },
     {
@@ -437,9 +644,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Before change: ['disco', 10, 1.2]\n",
+            "After change: ['hard rock', 10, 1.2]\n"
+          ]
+        }
+      ],
       "source": [
         "# Change the element based on the index\n",
         "\n",
@@ -458,15 +674,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Before change: ['hard rock', 10, 1.2]\n",
+            "After change: [10, 1.2]\n"
+          ]
+        }
+      ],
       "source": [
         "# Delete the element based on the index\n",
         "\n",
         "print('Before change:', A)\n",
         "del(A[0])\n",
-        "print('After change:', A)"
+        "print('After change:', A)\n"
       ]
     },
     {
@@ -478,13 +703,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['hard', 'rock', 'can', 'hurt', 'you']"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Split the string, default is by space\n",
         "\n",
-        "'hard rock'.split()"
+        "'hard rock can hurt you'.split()"
       ]
     },
     {
@@ -496,9 +732,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['A', 'B', 'C', 'D']"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Split the string by comma\n",
         "\n",
@@ -521,9 +768,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A: ['hard rock', 10, 1.2]\n",
+            "B: ['hard rock', 10, 1.2]\n"
+          ]
+        }
+      ],
       "source": [
         "# Copy (copy by reference) the list A\n",
         "\n",
@@ -549,9 +805,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "B[0]: hard rock\n",
+            "B[0]: banana\n"
+          ]
+        }
+      ],
       "source": [
         "# Examine the copy by reference\n",
         "\n",
@@ -583,9 +848,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['banana', 10, 1.2]"
+            ]
+          },
+          "execution_count": 72,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Clone (clone by value) the list A\n",
         "\n",
@@ -616,9 +892,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "B[0]: banana\n",
+            "B[0]: banana\n"
+          ]
+        }
+      ],
       "source": [
         "print('B[0]:', B[0])\n",
         "A[0] = \"hard rock\"\n",
@@ -636,7 +921,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Create a list <code>a_list</code>, with the following elements <code>1</code>, <code>hello</code>, <code>[1,2,3]</code> and <code>True</code>. \n"
+        "Create a list <code>a_list</code>, with the following elements <code>1</code>, <code>'hello'</code>, <code>[1,2,3]</code> and <code>True</code>. \n"
       ]
     },
     {
@@ -802,6 +1087,110 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "names = ['Evans', 'Sammy T', 'Sylvan', 'Beiber', 'Eben']\n",
+        " \n",
+        "names2 = names[:]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Beiber', 'Eben', 'Evans', 'Sammy T', 'Sylvan']\n"
+          ]
+        }
+      ],
+      "source": [
+        "names.sort()\n",
+        "print(names)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Beiber', 'Eben', 'Evans', 'Sammy T', 'Sylvan']"
+            ]
+          },
+          "execution_count": 37,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sorted(names2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Evans', 'Sammy T', 'Sylvan', 'Beiber', 'Eben']\n",
+            "['Sylvan', 'Beiber', 'Eben']\n",
+            "['Evans', 'Sammy T', 'Sylvan']\n",
+            "['Evans', 'Sylvan', 'Eben']\n",
+            "['Eben', 'Beiber', 'Sylvan', 'Sammy T', 'Evans']\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(names2)\n",
+        "\n",
+        "print(names2[2:])\n",
+        "print(names2[:3])\n",
+        "print(names2[::2])\n",
+        "print(names2[::-1])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Sylvan', 'Sammy T', 'Evans', 'Eben', 'Beiber']"
+            ]
+          },
+          "execution_count": 42,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sorted(names2)[::-1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "empty_list = []"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -858,13 +1247,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -872,7 +1261,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
