--- a/01-Introduction-to-Python/PY0101EN-3-3-Functions .ipynb
+++ b/01-Introduction-to-Python/PY0101EN-3-3-Functions .ipynb
@@ -4,6 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "\n",
+        "\n",
+        "\n",
         "# Functions in Python\n",
         "\n",
         "Estimated time needed: **40** minutes\n",
@@ -105,21 +108,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5 if you add two 7\n",
+            "7\n"
+          ]
+        }
+      ],
       "source": [
         "# First function example: Add 1 to a and store as b\n",
         "\n",
         "def add(a):\n",
         "    \"\"\"\n",
-        "    add 1 to a\n",
+        "    add 2 to a\n",
         "    \"\"\"\n",
-        "    b = a + 1\n",
-        "    print(a, \"if you add one\", b)\n",
-        "    return(b)"
+        "    b = a + 2\n",
+        "    print(a, \"if you add two\", b)\n",
+        "    return(b)\n",
+        "\n",
+        "# add(2)\n",
+        "# print(add(2))\n",
+        "y = add(5)\n",
+        "print(y)"
       ]
     },
     {
@@ -137,6 +154,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Help on built-in function print in module builtins:\n",
+            "\n",
+            "print(...)\n",
+            "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+            "    \n",
+            "    Prints the values to a stream, or to sys.stdout by default.\n",
+            "    Optional keyword arguments:\n",
+            "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+            "    sep:   string inserted between values, default a space.\n",
+            "    end:   string appended after the last value, default a newline.\n",
+            "    flush: whether to forcibly flush the stream.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "help(print)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -145,11 +190,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Help on function add in module __main__:\n",
+            "\n",
+            "add(a)\n",
+            "    add 2 to a\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Get a help on add function\n",
         "\n",
@@ -197,6 +254,30 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "def mult(a):\n",
+        "    '''multiplies by 2\n",
+        "    '''\n",
+        "    c = a * 2\n",
+        "    return c\n",
+        "\n",
+        "b = mult(5)\n",
+        "print(b)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -205,11 +286,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "24\n"
+          ]
+        }
+      ],
       "source": [
         "# Define a function for multiple two numbers\n",
         "\n",
@@ -231,11 +320,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use mult() multiply two integers\n",
         "\n",
@@ -261,11 +361,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "31.400000000000002"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use mult() multiply two floats\n",
         "\n",
@@ -281,15 +392,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Use mult() multiply two different type values together\n",
         "\n",
-        "Mult(2, \"Michael Jackson \")"
+        "Mult(2, \"Michael Jackson \")\n",
+        "Mult(2, [1, 2, 3, 4, 5])"
       ]
     },
     {
@@ -312,21 +435,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'z' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[26], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(a, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mif you square + 1\u001b[39m\u001b[38;5;124m\"\u001b[39m, c) \n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m(c)\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mz\u001b[49m)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'z' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Function Definition\n",
         "\n",
         "def square(a):\n",
         "    \n",
         "    # Local variable b\n",
-        "    b = 1\n",
-        "    c = a * a + b\n",
+        "    z = 1\n",
+        "    c = a * a + z\n",
         "    print(a, \"if you square + 1\", c) \n",
-        "    return(c)"
+        "    return(c)\n",
+        "print(z)\n"
       ]
     },
     {
@@ -395,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 28,
       "metadata": {
         "trusted": true
       },
@@ -413,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 29,
       "metadata": {
         "trusted": true
       },
@@ -434,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 30,
       "metadata": {
         "trusted": true
       },
@@ -452,7 +588,7 @@
               "1"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -472,11 +608,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Michael Jackson\n",
+            "None\n",
+            "Michael Jackson\n",
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "# See what functions returns are\n",
         "\n",
@@ -640,13 +787,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 38,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Make a Function for the calculation above\n",
+        "from math import sqrt\n",
+        "\n",
         "\n",
         "def Equation(a,b):\n",
         "    c = a + b + 2 * a * b - 1\n",
@@ -654,7 +811,14 @@
         "        c = 0 \n",
         "    else:\n",
         "        c = 5\n",
-        "    return(c) "
+        "    return(c) \n",
+        "\n",
+        "def hyp(a, b):\n",
+        "    c = sqrt(a ** 2 + b ** 2)\n",
+        "    return c\n",
+        "y= hyp(6, 8)\n",
+        "\n",
+        "print(y)\n"
       ]
     },
     {
@@ -1045,7 +1209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "trusted": true
       },
@@ -1063,16 +1227,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "this album sucks it's rating is 4\n",
+            "this album is good its rating is 10\n"
+          ]
+        }
+      ],
       "source": [
         "# Test the value with default value and with input\n",
         "\n",
         "isGoodRating()\n",
-        "isGoodRating(10)"
+        "isGoodRating(10)\n"
       ]
     },
     {
@@ -1099,7 +1272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 45,
       "metadata": {
         "trusted": true
       },
@@ -1109,6 +1282,17 @@
           "output_type": "stream",
           "text": [
             "Michael Jackson is an artist\n"
+          ]
+        },
+        {
+          "ename": "NameError",
+          "evalue": "name 'internal_var1' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[45], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m printer1(artist)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# try runningthe following code\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m printer1(\u001b[43minternal_var1\u001b[49m) \n",
+            "\u001b[0;31mNameError\u001b[0m: name 'internal_var1' is not defined"
           ]
         }
       ],
@@ -1122,7 +1306,7 @@
         "    \n",
         "printer1(artist)\n",
         "# try runningthe following code\n",
-        "#printer1(internal_var1) "
+        "printer1(internal_var1) "
       ]
     },
     {
@@ -1138,7 +1322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 48,
       "metadata": {
         "trusted": true
       },
@@ -1148,7 +1332,8 @@
           "output_type": "stream",
           "text": [
             "Michael Jackson is an artist\n",
-            "Whitney Houston is an artist\n"
+            "Whitney Houston is an artist\n",
+            "AC/DC\n"
           ]
         }
       ],
@@ -1161,7 +1346,8 @@
         "    print(artist,\"is an artist\")\n",
         "\n",
         "printer(artist) \n",
-        "printer(internal_var)"
+        "printer(internal_var)\n",
+        "print(myFavouriteBand)"
       ]
     },
     {
@@ -1180,11 +1366,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AC/DC's rating is: 10.0\n",
+            "Deep Purple's rating is: 0.0\n",
+            "My favourite band is: AC/DC\n"
+          ]
+        }
+      ],
       "source": [
         "# Example of global variable\n",
         "\n",
@@ -1243,17 +1439,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AC/DC's rating is: 0.0\n",
+            "Deep Purple's rating is:  10.0\n",
+            "My favourite band is: Deep Purple\n"
+          ]
+        }
+      ],
       "source": [
         "# Example of global variable and local variable with the same name\n",
         "\n",
         "myFavouriteBand = \"AC/DC\"\n",
         "\n",
         "def getBandRating(bandname):\n",
+        "    global myFavouriteBand\n",
         "    myFavouriteBand = \"Deep Purple\"\n",
         "    if bandname == myFavouriteBand:\n",
         "        return 10.0\n",
@@ -1262,7 +1469,56 @@
         "\n",
         "print(\"AC/DC's rating is:\",getBandRating(\"AC/DC\"))\n",
         "print(\"Deep Purple's rating is: \",getBandRating(\"Deep Purple\"))\n",
-        "print(\"My favourite band is:\",myFavouriteBand)"
+        "print(\"My favourite band is:\",myFavouriteBand)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 55,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# keyword arguments\n",
+        "\n",
+        "def subtract(num1, num2):\n",
+        "    sub = num1 - num2\n",
+        "    return sub\n",
+        "subtract(4, 1)# positional arguments\n",
+        "subtract(num2 = 1, num1 = 4)# keyword arguments\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "execution_count": 59,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def subtract(num1, num2 = 4):\n",
+        "    sub = num1 - num2\n",
+        "    return sub\n",
+        "subtract(num2 = 5, num1 = 4)"
       ]
     },
     {
@@ -1282,11 +1538,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No of arguments: 3\n",
+            "Horsefeather\n",
+            "Adonis\n",
+            "Bone\n",
+            "No of arguments: 4\n",
+            "Sidecar\n",
+            "Long Island\n",
+            "Mudslide\n",
+            "Carriage\n"
+          ]
+        }
+      ],
       "source": [
         "def printAll(*args): # All the arguments are 'packed' into args which can be treated like a tuple\n",
         "    print(\"No of arguments:\", len(args)) \n",
@@ -1295,7 +1567,7 @@
         "#printAll with 3 arguments\n",
         "printAll('Horsefeather','Adonis','Bone')\n",
         "#printAll with 4 arguments\n",
-        "printAll('Sidecar','Long Island','Mudslide','Carriage')"
+        "printAll('Sidecar','Long Island','Mudslide','Carriage')\n"
       ]
     },
     {
@@ -1323,9 +1595,9 @@
         }
       ],
       "source": [
-        "def printDictionary(*args, **kargs):\n",
-        "    for key in kargs:\n",
-        "        print(key + \" : \" + kargs[key])\n",
+        "def printDictionary(*args, **kwargs):\n",
+        "    for key in kwargs:\n",
+        "        print(key + \" : \" + kwargs[key])\n",
         "\n",
         "printDictionary( \"Concordia\", \"Mark\", Country='Canada',Province='Ontario',City='Toronto')\n",
         "    "
@@ -1568,6 +1840,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def count_word(string, word):\n",
+        "    '''find the number of times word occurs\n",
+        "    in string\n",
+        "    '''\n",
+        "    "
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1600,6 +1885,16 @@
         "```\n",
         "\n",
         "</details>\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def fizz_buzz(number, rep_three, rep_five):\n",
+        "    "
       ]
     },
     {
@@ -1639,19 +1934,25 @@
         "\n",
         "<hr/>\n",
         "\n",
-        "## <h3 align=\"center\"> © IBM Corporation 2020. All rights reserved. <h3/>\n"
+        "## <h3 align=\"center\"> © IBM Corporation 2020. All rights reserved. <h3/>\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Pyolite",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -1659,7 +1960,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.8.10"
     }
   },
   "nbformat": 4,
